Kubernates files/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      name: python-app
  template:
    metadata:
      labels:
        name: python-app
    spec:
      containers:
      - name: python-app
        image: us.gcr.io/iti-sherif/python-app:final
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: python-app
spec:
  type: ClusterIP
  selector:
    name: python-app
  ports:
    - port: 80
      targetPort: 8000
